--- a/templates/main.html
+++ b/templates/main.html
@@ -60,9 +60,8 @@
         <h1 class="my-4">SELLER</h1>
 
         <div class="list-group">
-          <a href="#" class="list-group-item">Category 1</a>
-            <a href="#" class="list-group-item">Category 2</a>
-            <a href="#" class="list-group-item">Category 3</a>
+          <a href="#" class="list-group-item">Flea Market</a>
+            <a href="#" class="list-group-item">Auction</a>
         </div>
 
       </div>
@@ -94,14 +93,16 @@
         {% for board in boards %}
         <tr>
 
-            <td data-label="Num." width=10%>{{ forloop.counter }}</td>
-            <td data-label="Product Name" width=65%>
+            <td data-label="Num." width=5%>{{ forloop.counter }}</td>
+            <td data-label="Product Name" width=25%>
                 <form action="{% url 'main2' %}post={{ board.id }}" method="POST" title="{{ board.subject}}">
                     <a href="{% url 'main2' %}post={{ board.id }}" value="{{ board.id }}">{{ board.name }}</a>
                 </form>
             </td>
-            <td data-label="Price" width=15%>{{ board.price }}</td>
-            <td data-label="View" width=10%>{{ board.view }}</td>
+            <td data-label="Price" width=10%>{{ board.price }}</td>
+            <td data-label="Wish" width=20%>{{ board.view }}</td>
+            <td data-label="Status" width=15%>{{ board.status }}</td>
+            <td data-label="History" width=25%>{{ board.view }}</td>
 
         </tr>
         {% endfor %}
