--- a/templates/main.html
+++ b/templates/main.html
@@ -77,7 +77,7 @@
           <div class="card-body">
             <h2 class="card-title"></h2>
             <p class="card-text"><div id="data" class="table-responsive">
-    <table class="table">
+    <table id="example" class="table">
         <thead>
         <tr>
             <th>Num.</th>
@@ -93,17 +93,15 @@
         {% for board in boards %}
         <tr>
 
+          <form action="{% url 'main' %}post={{ board.id }}" method="POST" title="{{ board.subject}}" id="product">
+            {% csrf_token %}
             <td data-label="Num." width=5%>{{ forloop.counter }}</td>
-            <td data-label="Product Name" width=25%>
-                <form action="{% url 'main2' %}post={{ board.id }}" method="POST" title="{{ board.subject}}">
-                    <a href="{% url 'main2' %}post={{ board.id }}" value="{{ board.id }}">{{ board.name }}</a>
-                </form>
-            </td>
+            <td data-label="Product Name" width=25%>{{ board.name }}</td>
             <td data-label="Price" width=10%>{{ board.price }}</td>
             <td data-label="Wish" width=20%>{{ board.view }}</td>
             <td data-label="Status" width=15%>{{ board.status }}</td>
             <td data-label="History" width=25%>{{ board.view }}</td>
-
+          </form>
         </tr>
         {% endfor %}
 
@@ -177,6 +175,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'js/main.js' %}"></script>
 
 </body>
 
