- buyer 페이지 product 띄우고 seller product목록은 본인의 product만 뜨도록 수정
- product 등록 seller_name 은 로그인한 유저의 이름으로 자동 저장

--- a/templates/main2.html
+++ b/templates/main2.html
@@ -116,20 +116,23 @@
         </div>
 
         <div class="row">
-
+{% for board in boards %}
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
               <a>
-        <img class="img-fluid rounded" name="image" src="" alt="">
+                  {% if board.photo %}
+        <img class="img-fluid rounded" name="image" src="{{ board.photo.url }}" alt="">
+                  {% else %}
             <img class="img-fluid rounded" name="image" src="http://placehold.it/700x400" alt="">
+                  {% endif %}
               </a>
             <form action="" method="POST" title="Title">
               <div class="card-body">
                 <h4 class="card-title">
-                  <a value="">value</a>
+                  <a value="">{{ board.name }}</a>
                 </h4>
-                <h5>value</h5>
-                <p class="card-text">by admin</p>
+                <h5>{{board.price}}</h5>
+                <p class="card-text">by {{board.seller_name}}</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">
@@ -139,54 +142,32 @@
             </form>
             </div>
           </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a>
-        <img class="img-fluid rounded" name="image" src="" alt="">
-            <img class="img-fluid rounded" name="image" src="http://placehold.it/700x400" alt="">
-              </a>
-            <form action="" method="POST" title="Title">
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a value="">value</a>
-                </h4>
-                <h5>value</h5>
-                <p class="card-text">by admin</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">
-                    <a href="" class="btn btn-primary" >Select</a>
-                </small>
-              </div>
-            </form>
-            </div>
-          </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a>
-        <img class="img-fluid rounded" name="image" src="" alt="">
-            <img class="img-fluid rounded" name="image" src="http://placehold.it/700x400" alt="">
-              </a>
-            <form action="" method="POST" title="Title">
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a value="">value</a>
-                </h4>
-                <h5>value</h5>
-                <p class="card-text">by admin</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">
-                    <a href="" class="btn btn-primary" >Select</a>
-                </small>
-              </div>
-            </form>
-            </div>
-          </div>
-
+{% endfor %}
         </div>
         <!-- /.row -->
 
+      <ul class="pagination justify-content-center mb-4">
+        {% if boards.has_previous %}
+          <li><a href="?page={{ boards.previous_page_number }}">&laquo;</a></li>
+        {% else %}
+          <li class = "disabled"><span>&laquo;</span></li>
+        {% endif %}
+
+        {% for i in boards.paginator.page_range %}
+
+          {% if boards.number == i %}
+            <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+          {% else %}
+            <li><a href="?page={{ i }}">{{ i }}</a></li>
+          {% endif %}
+        {% endfor %}
+
+        {% if boards.has_next %}
+            <li><a href="?page={{ boards.next_page_number }}">&raquo;</a></li>
+        {% else %}
+            <li class="disabled"><span>&raquo;</span></li>
+        {%endif %}
+        </ul>
       </div>
       <!-- /.col-lg-9 -->
 
