--- a/templates/product_info.html
+++ b/templates/product_info.html
@@ -1,10 +1,67 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Tutorial</title>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <!-- CSS -->
+    <link href="{% static "css/productpage.css" %}" rel="stylesheet">
+    <meta name="robots" content="noindex,follow" />
+
   </head>
+
   <body>
-    <h1>aaaa</h1>
+    <main class="container">
+
+      <!-- Left Column / Product Image -->
+      <div class="left-column">
+        <img src="http://127.0.0.1:8000/media/{{ product.photo }}" data-image="red" class="active" alt="">
+      </div>
+      <div class="middle-column">
+
+      </div>
+      <!-- Right Column -->
+      <div class="right-column">
+        <!-- Product Description -->
+        <div class="product-description">
+          <span>{{product.status}}</span>
+          <h1>{{product.name}}</h1>
+          <p>{{product.content}}</p>
+        </div>
+
+        <!-- Product Configuration -->
+        <div class="product-configuration">
+
+          <!-- payment method Configuration -->
+          <div class="payment-config">
+            <span>Payment method</span>
+
+            <div class="payment-choose">
+              <button onclick="location.href='listprice.html'">List Price</button>
+              <button onclick="location.href='auction.html'">Auction</button>
+            </div>
+
+            <a href="#">Seller info</a>
+          </div>
+        </div>
+
+        <!-- Product Pricing -->
+        <br>
+        <form class="change" action="" method="post">
+          <input type="submit" name="" value="">
+          <a id="delete" href="#" class="cart-btn">Delete this product</a>
+          <a id="can"  href="#" class="cart-btn">Cancel</a>
+          <a href="#" class="cart-btn">Save</a>
+        </form>
+
+      </div>
+
+    </main>
+
+    <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
   </body>
 </html>
