--- a/templates/auction.html
+++ b/templates/auction.html
@@ -7,7 +7,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <!-- CSS -->
-    <link href="{% static 'productpage.css' %}" rel="stylesheet">
+    <link href="{% static 'css/productpage.css' %}" rel="stylesheet">
     <meta name="robots" content="noindex,follow" />
 
   </head>
