--- a/templates/main2.html
+++ b/templates/main2.html
@@ -46,7 +46,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="{% url 'main2' %}">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -129,7 +129,7 @@
             <form action="" method="POST" title="Title">
               <div class="card-body">
                 <h4 class="card-title">
-                  <a value="">{{ board.name }}</a>
+                  <a href="{% url 'main2' %}product={{ board.id }}" value="{{ board.id }}">{{ board.name }}</a>
                 </h4>
                 <h5>{{board.price}}</h5>
                 <p class="card-text">by {{board.seller_name}}</p>
