--- a/templates/productpage.html
+++ b/templates/productpage.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,7 +8,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <!-- CSS -->
-    <link href="{% static 'productpage.css' %}" rel="stylesheet">
+    <link href="{% static 'css/productpage.css' %}" rel="stylesheet">
     <meta name="robots" content="noindex,follow" />
 
   </head>
@@ -24,9 +25,9 @@
       <div class="right-column">
         <!-- Product Description -->
         <div class="product-description">
-          <span>Product type</span>
-          <h1>Product name</h1>
-          <p>Product description</p>
+          <span>{{board.type}}</span>
+          <h1>{{board.name}}</h1>
+          <p>{{board.content}}</p>
         </div>
 
         <!-- Product Configuration -->
@@ -41,7 +42,7 @@
               <button onclick="location.href='auction.html'">Auction</button>
             </div>
 
-            <a href="#">Seller info</a>
+            <a href="#">Seller info : {{ board.seller_name }}</a>
           </div>
         </div>
 
