--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Market</title>
+  <title>SKKU Flea Market</title>
 
   <!-- Bootstrap core CSS -->
   <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'main2' %}">Market</a>
+      <a class="navbar-brand" href="{% url 'main2' %}">SKKU Flea Market</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,17 +35,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">menu1</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">menu2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">menu3</a>
-          </li>
-            <li class="nav-item">
-            <a class="nav-link" href="">menu4</a>
-          </li>
+            <a class="nav-link" href="../logout">Log Out</a>
         </ul>
       </div>
     </div>
