--- a/templates/product_info.html
+++ b/templates/product_info.html
@@ -53,14 +53,13 @@
         <form class="change" action="" method="post">
           <input type="submit" name="" value="">
           <a id="delete" href="#" class="cart-btn">Delete this product</a>
-          <a id="can"  href="#" class="cart-btn">Cancel</a>
+          <a id="can"  href="#" class="cart-btn">Modification</a>
           <a href="#" class="cart-btn">Save</a>
         </form>
 
       </div>
 
     </main>
-
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
   </body>
