--- a/static/css/productpage.css
+++ b/static/css/productpage.css
@@ -18,7 +18,7 @@ html, body {
 
 /* Columns */
 .left-column {
-  width: 45%;
+  width: 40%;
   position: relative;
   text-align: center;
   margin-top: 60px;
@@ -26,10 +26,10 @@ html, body {
 }
 
 .middle-column {
-  width : 10%;
+  width : 15%;
 }
 .right-column {
-  width: 35%;
+  width: 45%;
   margin-top: 60px;
 }
 
@@ -154,6 +154,7 @@ html, body {
   text-decoration: none;
   padding: 12px 30px;
   transition: all .5s;
+  border : 0px;
 }
 .cart-btn:hover {
   background-color: #64af3d;
