--- a/templates/main2.html
+++ b/templates/main2.html
@@ -23,27 +23,24 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'main' %}">Market</a>
-        <svg style="display: none">
-  <symbol id="magnify" viewBox="0 0 18 18" height="100%" width="100%">
-    <path d="M12.5 11h-.8l-.3-.3c1-1.1 1.6-2.6 1.6-4.2C13 2.9 10.1 0          6.5 0S0 2.9 0 6.5 2.9 13 6.5 13c1.6 0 3.1-.6 4.2-1.6l.3.3v.8l5 5          1.5-1.5-5-5zm-6 0C4 11 2 9 2 6.5S4 2 6.5 2 11 4 11 6.5 9 11 6.5            11z" fill="#fff" fill-rule="evenodd"/>
-  </symbol>
-</svg>
-        <div >
-      <div class="wrapper" >
-      <div class="nav-bar">
-                     </div>
-         </div>
-         </div>
-      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-      <script src="js/index.js"></script>
-              <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+      <div class="col-lg-1">
+        <a class="navbar-brand" href="{% url 'main' %}">Market</a>
 
-</div>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      </div>
+      <div class="col-lg-8">
+        <form action="" method="POST">
+            {% csrf_token %}
+      <div class="input-group">
+        <input type="text" name="word" class="form-control" placeholder="Search for">
+        <span class="input-group-btn">
+          <button class="btn btn-secondary" type="submit">검색</button>
+        </span>
+      </div>
+        </form>
+
+      </div>
+
+      <div class="collapse navbar-collapse col-lg-1" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home
@@ -51,19 +48,15 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">menu1</a>
+            <a class="nav-link" href="wishlist">menu1</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">menu2</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">menu3</a>
-          </li>
-            <li class="nav-item">
-            <a class="nav-link" href="">menu4</a>
-          </li>
         </ul>
       </div>
+
+</div>
     </div>
   </nav>
 
