--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -65,29 +65,17 @@
 
     <div class="row">
 
-      <div class="col-lg-3">
-
-        <h1 class="my-4">BUYER</h1>
-
-          <div class="list-group">
-          <a href="" class="list-group-item">Category 1</a>
-            <a href="" class="list-group-item">Category 2</a>
-              <a href="" class="list-group-item">Category 3</a>
-        </div>
-
-      </div>
-
-		<div class="col-lg-9">
+		<div class="col-lg-12">
 			<div class="panel panel-info">
 				<div class="panel-heading">
 					<div class="panel-title">
 						<div class="row">
 							<div class="col-xs-6">
-								<h5><span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h5>
+								<h5><span class="glyphicon glyphicon-heart"></span> <strong>Wish List</strong></h5>
 							</div>
 							<div class="col-xs-6">
 								<button type="button" class="btn btn-primary btn-sm btn-block">
-									<span class="glyphicon glyphicon-share-alt"></span> Continue shopping
+									<span class="glyphicon glyphicon-share-alt"></span> Continue Shopping
 								</button>
 							</div>
 						</div>
@@ -95,69 +83,41 @@
 				</div>
 				<div class="panel-body">
 					<div class="row">
-						<div class="col-xs-2"><img class="img-responsive" src="http://placehold.it/100x70">
+            {% for board in boards %}
+
+						<div class="col-xs-2"><img class="img-responsive" src="{{ board.photo.url }}">
 						</div>
 						<div class="col-xs-4">
-							<h4 class="product-name"><strong>Product name</strong></h4><h4><small>Product description</small></h4>
+							<h4 class="product-name"><strong>{{board.name}}</strong></h4><h4><small>{{board.content}}</small></h4>
 						</div>
 						<div class="col-xs-6">
-							<div class="col-xs-6 text-right">
-								<h6><strong>25.00 <span class="text-muted">x</span></strong></h6>
+              <div class="col-xs-5">
+                <h4 style="color : green;" class="product-name">{{board.status}}</h4>
+                <h4 style="color : gray;" class="product-name">23:55:14</h4>
+              </div>
+
+							<div class="col-xs-5 text-right">
+								<h3><strong>{{board.price}}<span class="text-muted">원</span></strong></h3>
 							</div>
-							<div class="col-xs-4">
-								<input type="text" class="form-control input-sm" value="1">
-							</div>
-							<div class="col-xs-2">
+							<div class="col-xs-2" style="text-align : center;">
 								<button type="button" class="btn btn-link btn-xs">
-									<span class="glyphicon glyphicon-trash"> </span>
+									<span style="line-height : 60px; font-size : 15px;" class="glyphicon glyphicon-trash"> </span>
 								</button>
 							</div>
 						</div>
 					</div>
 					<hr>
-					<div class="row">
-						<div class="col-xs-2"><img class="img-responsive" src="http://placehold.it/100x70">
-						</div>
-						<div class="col-xs-4">
-							<h4 class="product-name"><strong>Product name</strong></h4><h4><small>Product description</small></h4>
-						</div>
-						<div class="col-xs-6">
-							<div class="col-xs-6 text-right">
-								<h6><strong>25.00 <span class="text-muted">x</span></strong></h6>
-							</div>
-							<div class="col-xs-4">
-								<input type="text" class="form-control input-sm" value="1">
-							</div>
-							<div class="col-xs-2">
-								<button type="button" class="btn btn-link btn-xs">
-									<span class="glyphicon glyphicon-trash"> </span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<hr>
+          {% endfor %}
+
 					<div class="row">
 						<div class="text-center">
-							<div class="col-xs-9">
-								<h6 class="text-right">Added items?</h6>
-							</div>
-							<div class="col-xs-3">
-								<button type="button" class="btn btn-default btn-sm btn-block">
-									Update cart
-								</button>
-							</div>
 						</div>
 					</div>
 				</div>
 				<div class="panel-footer">
 					<div class="row text-center">
-						<div class="col-xs-9">
-							<h4 class="text-right">Total <strong>$50.00</strong></h4>
-						</div>
-						<div class="col-xs-3">
-							<button type="button" class="btn btn-success btn-block">
-								Checkout
-							</button>
+						<div class="col-xs-11">
+							<h4 class="text-right">Total <strong>50.00원</strong></h4>
 						</div>
 					</div>
 				</div>
