--- a/templates/write_post.html
+++ b/templates/write_post.html
@@ -16,7 +16,7 @@
 
   <!-- Custom styles for this template -->
   <link href="{% static 'css/blog-post.css' %}" rel="stylesheet">
-    <link href="{% static 'post_form.css' %}" rel="stylesheet">
+    <link href="{% static 'css/post_form.css' %}" rel="stylesheet">
 
 </head>
 
@@ -54,10 +54,65 @@
   </nav>
 
   <!-- Page Content -->
+    <!-- Page Content -->
   <div class="container">
 
     <div class="row">
-        <div class="col-lg-5 row-lg-5" style="height : 100%">
+        <div class="col-lg-3">
+
+        <h1 class="my-4">Community</h1>
+
+        <div class="list-group">
+          <a href="#" class="list-group-item">Category 1</a>
+        </div>
+
+      </div>
+
+      <!-- Post Content Column -->
+      <div class="col-lg-8">
+
+          <form  method="POST" action="{% url 'posting' %}" enctype="multipart/form-data" novalidate>
+              {% csrf_token %}
+          <h1 class="mt-4">
+              <hr>
+      <div class="post-title">
+        <input type="text" name="name" id="post-title" class="post-input large"  placeholder="Product Title"/>
+      </div>
+          </h1>
+          <hr>
+
+        <!-- Post Content -->
+              <p class="lead">
+          <a>
+              <div class="post-content">
+          <input type="number" name="price" class="post-input" placeholder="Product Price"/>
+      </div>
+          </a>
+        </p>
+          <hr>
+              <p class="lead">
+          <a>
+              <div class="post-content">
+          <input type="text" name="phone" class="post-input" placeholder="Phone Number"/>
+      </div>
+          </a>
+        </p>
+          <hr>
+              <p class="lead">
+          <a>
+              <div class="post-content">
+          <input type="text" name="place" class="post-input" placeholder="Trading Place"/>
+      </div>
+          </a>
+        </p>
+          <hr>
+
+        <p><div class="post-content">
+        <textarea name="content" class="post-input content" placeholder="Content"></textarea>
+      </div></p>
+
+        <hr>
+              <div class="col-lg-5 row-lg-5" style="height : 100%">
             <hr>
             <div class="d-flex align-items-center col justify-content-center" style="margin-bottom: auto; margin-top : auto ; height:100%; width : 100%">
                 <img id="img" src="#" class="image-responsive" style="width : 100%; height : auto; object-fit:contain;">
@@ -66,74 +121,41 @@
 
 
         </div>
-
-      <div class="col-lg-1"></div>
-      <div class="col-lg-5">
-          <form  method="POST" action="{% url 'posting' %}" enctype="multipart/form-data" name="form" onsubmit="return check()"novalidate >
-              {% csrf_token %}
+            <div class="container" ng-controller="DemoController">
+            <input type="file" name="photo" class="form-control" accept="image/*" id="avatar-upload" ng-model="upload" onchange="angular.element(this).scope().loadFile(event)">
+    </div>
               <hr>
-
-              <div class="form-group">
-                  <label class="control-label col-lg-6" for="name">Product Name</label>
-                  <div class="col-lg-12">
-					<input type="text" class="form-control" id="name" placeholder="" name="name">
-				  </div>
-              </div>
-              <hr>
-
-              <div class="form-group">
-                  <label class="control-label col-lg-6" for="price">Price</label>
-                  <div class="col-lg-12">
-					<input type="number" class="form-control" id="price" placeholder="" name="price">
-				  </div>
-              </div>
-              <hr>
-
-              <div class="form-group">
-                  <label class="control-label col-lg-12" for="phone">Phone Number</label>
-                  <div class="col-lg-12">
-					<input type="text" class="form-control" id="phone" placeholder="" name="phone">
-				  </div>
-              </div>
-              <hr>
-
-              <div class="form-group">
-                  <label class="control-label col-lg-12" for="place">Trading Place</label>
-                  <div class="col-lg-12">
-					<input type="text" class="form-control" id="place" placeholder="" name="place">
-				  </div>
-              </div>
-              <hr>
-
               <div class="btn-group btn-group-toggle" data-toggle="buttons">
                   <div class="col-lg-12">
                     <label class="btn btn-outline-dark active">
-                      <input type="radio" name="options" value="flea" id="option1" autocomplete="off" checked> Flea Market
+                      <input type="radio" name="options" value="option1" id="option1" autocomplete="off" checked> Flea Market
                     </label>
                     <label class="btn btn-outline-dark">
-                      <input type="radio" name="options" value="auction" id="option2" autocomplete="off"> Auction
+                      <input type="radio" name="options" value="option2" id="option2" autocomplete="off"> Auction
                     </label>
                   </div>
               </div>
               <hr>
 
-
-              <div class="container" ng-controller="DemoController">
-                  <input type="file" name="photo" class="form-control" accept="image/*" id="avatar-upload">
-              </div>
-              <hr>
-
-              <div class="col-lg-12">
-
-              <button type="button" class="btn btn-primary">Cancel</button>
-              <button type="submit"  class="btn btn-primary">Submit</button>
-          </div>
+          <button type="button" class="btn btn-primary">Cancel</button>
+          <button type="submit"  class="btn btn-primary">Submit</button>
           </form>
+        <!-- Comments Form -->
+        <div class="card my-4">
+
+        </div>
+
+
       </div>
+<!-- Sidebar Widgets Column -->
 
     </div>
 
+      <!-- Sidebar Widgets Column -->
+    <!-- /.row -->
+
   </div>
+  <!-- /.container -->
   <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
