--- a/templates/main2.html
+++ b/templates/main2.html
@@ -88,32 +88,27 @@
 
       <div class="col-lg-9">
 
-        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+      <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+
         </div>
+
+      <div class="card-footer text-muted">
+              <form action="" method="POST">
+                  {% csrf_token %}
+            <div class="input-group">
+              <input type="text" name="word" class="form-control" placeholder="Search for">
+              <span class="input-group-btn">
+                <button class="btn btn-secondary" type="submit">검색</button>
+              </span>
+            </div>
+              </form>
+            <a ></a>
+          </div>
+
+        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+
+        </div>
+
 
         <div class="row">
 {% for board in boards %}
