--- a/templates/main2.html
+++ b/templates/main2.html
@@ -127,6 +127,7 @@
                   <a href="{% url 'main2' %}product={{ board.id }}" value="{{ board.id }}">{{ board.name }}</a>
                 </h4>
                 <h5>{{board.price}}</h5>
+                  <h5>{{board.status}}</h5>
                 <p class="card-text">by {{board.seller_name}}</p>
               </div>
               <div class="card-footer">
