--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -82,22 +82,22 @@
 					</div>
 				</div>
 				<div class="panel-body">
-					<div class="row">
             {% for board in boards %}
+            <div class="row">
 
-						<div class="col-xs-2"><img class="img-responsive" src="{{ board.photo.url }}">
+						<div class="col-xs-2"><img class="img-responsive" src="{{ board.product.photo.url }}" style="object-fit: cover; width: 120px; height: 70px; text-align : center" >
 						</div>
 						<div class="col-xs-4">
-							<h4 class="product-name"><strong>{{board.name}}</strong></h4><h4><small>{{board.content}}</small></h4>
+							<h4 class="product-name"><strong>{{board.product.name}}</strong></h4><h4><small>{{board.product.content}}</small></h4>
 						</div>
 						<div class="col-xs-6">
               <div class="col-xs-5">
-                <h4 style="color : green;" class="product-name">{{board.status}}</h4>
+                <h4 style="color : green;" class="product-name">{{board.product.status}}</h4>
                 <h4 style="color : gray;" class="product-name">23:55:14</h4>
               </div>
 
 							<div class="col-xs-5 text-right">
-								<h3><strong>{{board.price}}<span class="text-muted">원</span></strong></h3>
+								<h3><strong>{{board.product.price}}<span class="text-muted">원</span></strong></h3>
 							</div>
 							<div class="col-xs-2" style="text-align : center;">
 								<button type="button" class="btn btn-link btn-xs">
