--- a/static/css/productpage.css
+++ b/static/css/productpage.css
@@ -18,8 +18,14 @@ html, body {
 
 /* Columns */
 .left-column {
-  width: 65%;
+  width: 40%;
   position: relative;
+  text-align: center;
+  margin-top: 60px;
+}
+
+.middle-column {
+  width : 15%;
 }
 
 .right-column {
@@ -30,12 +36,8 @@ html, body {
 
 /* Left Column */
 .left-column img {
-  width: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  transition: all 0.3s ease;
+  width:auto;
+  height:100%;
 }
 
 .left-column img.active {
@@ -151,6 +153,7 @@ html, body {
   text-decoration: none;
   padding: 12px 30px;
   transition: all .5s;
+  border : 0px;
 }
 .cart-btn:hover {
   background-color: #64af3d;
