--- a/templates/main2.html
+++ b/templates/main2.html
@@ -54,7 +54,7 @@
             <a class="nav-link" href="wishlist">Wish list</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="">Shopping list</a>
+            <a class="nav-link" href="shoppinglist">Shopping list</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout">Log out</a>
