--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load remain %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -130,9 +131,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="panel-body">
+				<div class="panel-body" >
             {% for board in boards %}
-            <div class="row">
+            <div class="row" >
 
 						<div class="col-xs-2"><img class="img-responsive" src="{{ board.product.photo.url }}" style="object-fit: cover; width: 120px; height: 70px; text-align : center" >
 						</div>
@@ -142,7 +143,8 @@
 						<div class="col-xs-6">
               <div class="col-xs-5">
                 <h4 style="color : green;" class="product-name">{{board.product.status}}</h4>
-                <h4 style="color : gray;" class="product-name">23:55:14</h4>
+                <h4 style="color : gray;" class="product-name time" >{{board.product.created_date | date:'Y-m-d H:i'}}</h4>
+
               </div>
 
 							<div class="col-xs-5 text-right">
@@ -166,7 +168,6 @@
 				<div class="panel-footer">
 					<div class="row text-center">
 						<div class="col-xs-11">
-							<h4 class="text-right">Total <strong>50.00원</strong></h4>
 						</div>
 					</div>
 				</div>
@@ -198,6 +199,41 @@
   <!-- Bootstrap core JavaScript -->
   <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'js/wishlist.js'%}" type="text/javascript"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+        tid=setInterval('msg_time()',1000); // 타이머 1초간격으로 수행
+    });
+    var aa = document.getElementsByClassName("time");
+    let aaDate = []; let edDate = []; let RemainDate = []; let bb = [];
+    for(let i=0; i<aa.length; i++) {
+      bb[i] = aa.item(i);
+      aaDate[i] = bb[i].innerHTML;
+      edDate[i] = new Date(aaDate[i]).getTime() + 1000 * 60 * 60 * 24;
+    }
+    function msg_time(i) {
+      var stDate = new Date().getTime() - 1000 * 60 * 60 * 9;
+
+      for(let i=0; i<aa.length; i++) {
+        RemainDate[i] = edDate[i] - stDate;
+        var hours = Math.floor((RemainDate[i] % (1000 * 60 * 60 * 24)) / (1000*60*60));
+        var miniutes = Math.floor((RemainDate[i] % (1000 * 60 * 60)) / (1000*60));
+        var seconds = Math.floor((RemainDate[i] % (1000 * 60)) / 1000);
+        m = hours + ":" +  miniutes + ":" + seconds ; // 남은 시간 text형태로 변경
+        bb[i].innerHTML = m;
+        if (RemainDate[i] < 0) {
+          // 시간이 종료 되었으면..
+          bb[i].innerHTML = '00:00:00';
+        }else{
+          RemainDate[i] = RemainDate[i] - 1000; // 남은시간 -1초
+        }
+
+      }
+
+    }
+
+  </script>
 
 </body>
 
