--- a/templates/shoppinglist.html
+++ b/templates/shoppinglist.html
@@ -116,16 +116,16 @@
 		<div class="col-lg-12">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 			<div class="panel panel-info">
-				<div class="panel-heading">
+				<div class="panel-heading" style="background-color : pink;">
 					<div class="panel-title">
 						<div class="row">
-							<div class="col-xs-6">
-								<h5><span class="glyphicon glyphicon-heart"></span> <strong>Wish List</strong></h5>
+							<div class="col-xs-6" >
+								<h5><span class="glyphicon glyphicon-shopping-cart"></span> <strong>Shopping List</strong></h5>
 							</div>
-							<div class="col-xs-6">
+							<div class="col-xs-6"><a href="{% url 'main2' %}">
 								<button type="button" class="btn btn-primary btn-sm btn-block">
-									<span class="glyphicon glyphicon-share-alt"></span> Continue Shopping
-								</button>
+									<span class="glyphicon glyphicon-share-alt" ></span> Continue Shopping
+								</button></a>
 							</div>
 						</div>
 					</div>
@@ -141,17 +141,13 @@
 						</div>
 						<div class="col-xs-6">
               <div class="col-xs-5">
-                <h4 style="color : green;" class="product-name">{{board.product.status}}</h4>
-                <h4 style="color : gray;" class="product-name">23:55:14</h4>
+                <h4 style="color : green;" class="product-name">{{board.product.type}}</h4>
               </div>
 
 							<div class="col-xs-5 text-right">
 								<h3><strong>{{board.product.price}}<span class="text-muted">원</span></strong></h3>
 							</div>
 							<div class="col-xs-2" style="text-align : center;">
-								<button type="button" class="btn btn-link btn-xs">
-									<span style="line-height : 60px; font-size : 15px;" class="glyphicon glyphicon-trash"> </span>
-								</button>
 							</div>
 						</div>
 					</div>
@@ -166,7 +162,7 @@
 				<div class="panel-footer">
 					<div class="row text-center">
 						<div class="col-xs-11">
-							<h4 class="text-right">Total <strong>50.00원</strong></h4>
+							<h4 class="text-right">Total <strong>{{sum}}원</strong></h4>
 						</div>
 					</div>
 				</div>
