--- a/templates/write_post.html
+++ b/templates/write_post.html
@@ -128,10 +128,10 @@
               <div class="btn-group btn-group-toggle" data-toggle="buttons">
                   <div class="col-lg-12">
                     <label class="btn btn-outline-dark active">
-                      <input type="radio" name="options" value="option1" id="option1" autocomplete="off" checked> Flea Market
+                      <input type="radio" name="options" value="flea" id="option1" autocomplete="off" checked> Flea Market
                     </label>
                     <label class="btn btn-outline-dark">
-                      <input type="radio" name="options" value="option2" id="option2" autocomplete="off"> Auction
+                      <input type="radio" name="options" value="auction" id="option2" autocomplete="off"> Auction
                     </label>
                   </div>
               </div>
