--- a/templates/main2.html
+++ b/templates/main2.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="">Market</a>
+      <a class="navbar-brand" href="{% url 'main2' %}">Market</a>
         <svg style="display: none">
   <symbol id="magnify" viewBox="0 0 18 18" height="100%" width="100%">
     <path d="M12.5 11h-.8l-.3-.3c1-1.1 1.6-2.6 1.6-4.2C13 2.9 10.1 0          6.5 0S0 2.9 0 6.5 2.9 13 6.5 13c1.6 0 3.1-.6 4.2-1.6l.3.3v.8l5 5          1.5-1.5-5-5zm-6 0C4 11 2 9 2 6.5S4 2 6.5 2 11 4 11 6.5 9 11 6.5            11z" fill="#fff" fill-rule="evenodd"/>
@@ -89,14 +89,21 @@
         </div>
 
       <div class="card-footer text-muted">
-              <form action="" method="POST">
+              <form action="{% url 'search_product' %}" method="POST">
                   {% csrf_token %}
+                  <div class="input-group">
+              <input type="text" name="seller_name" class="form-control" placeholder="Seller Name">
+            </div>
+                  <div class="input-group">
+              <input type="text" name="product_name" class="form-control" placeholder="Product Name">
+            </div>
             <div class="input-group">
-              <input type="text" name="word" class="form-control" placeholder="Search for">
-              <span class="input-group-btn">
+              <input type="text" name="min" class="form-control" placeholder="Minimum Price"> ~
+                <input type="text" name="max" class="form-control" placeholder="Maximum Price">
+            </div>
+                  <span class="input-group-btn">
                 <button class="btn btn-secondary" type="submit">검색</button>
               </span>
-            </div>
               </form>
             <a ></a>
           </div>
