change_post.html 에서 content 텍스트 나타나지 않는 문제 수정, Community->Market 으로 수정

--- a/templates/change_post.html
+++ b/templates/change_post.html
@@ -60,7 +60,7 @@
     <div class="row">
         <div class="col-lg-3">
 
-        <h1 class="my-4">Community</h1>
+        <h1 class="my-4">Market</h1>
 
         <div class="list-group">
           <a href="#" class="list-group-item">Category 1</a>
@@ -108,7 +108,7 @@
           <hr>
 
         <p><div class="post-content">
-        <textarea name="content" class="post-input content" value="{{ product.content }}" placeholder="Content"></textarea>
+        <textarea name="content" class="post-input content" value="{{ product.content }}" placeholder="Content">{{ product.content }}</textarea>
       </div></p>
 
         <hr>
