--- a/templates/write_post.html
+++ b/templates/write_post.html
@@ -60,7 +60,7 @@
     <div class="row">
         <div class="col-lg-3">
 
-        <h1 class="my-4">Community</h1>
+        <h1 class="my-4">Market</h1>
 
         <div class="list-group">
           <a href="#" class="list-group-item">Category 1</a>
