--- a/templates/read_post2.html
+++ b/templates/read_post2.html
@@ -23,28 +23,25 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="">Market</a>
+      <a class="navbar-brand" href="{% url 'main2' %}">Market</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="">Home
+            <a class="nav-link" href="{% url 'main2' %}">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">menu1</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="wishlist">Wish list</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="shoppinglist">Shopping list</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">menu2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">menu3</a>
-          </li>
-            <li class="nav-item">
-            <a class="nav-link" href="">menu4</a>
+            <a class="nav-link" href="/logout">Log out</a>
           </li>
         </ul>
       </div>
