--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -35,17 +35,14 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="wishlist">Wishlist</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="wishlist">Wish list</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="shoppinglist">Shopping list</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">menu2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">menu3</a>
-          </li>
-            <li class="nav-item">
-            <a class="nav-link" href="">menu4</a>
+            <a class="nav-link" href="/logout">Log out</a>
           </li>
         </ul>
       </div>
