--- a/templates/write_post.html
+++ b/templates/write_post.html
@@ -45,8 +45,8 @@
           <li class="nav-item">
             <a class="nav-link" href="">menu3</a>
           </li>
-            <li class="nav-item">
-            <a class="nav-link" href="">menu4</a>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Log out</a>
           </li>
         </ul>
       </div>
